Added section dealing with Jinja2/Angular variable incompatibility
https://stackoverflow.com/a/30362956

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -55,6 +55,18 @@
     <!-- if entries >1, for each row -->
     <!-- add button to link rows -->
     <!-- css draw curve to each button from each row -->
+    <script>
+        /* We must change the AngularJS variable notation so that Jinja2 does not
+            interfere with it. The other way to go about it is to use Jinja2 to output
+            a string with curly braces instead.
+            e.g {{ '{{ angular_variable }}' }} */
+        var app = angular.module('Application', []);
+
+        app.config(['$interpolateProvider', function($interpolateProvider) {
+          $interpolateProvider.startSymbol('{a');
+          $interpolateProvider.endSymbol('a}');
+        }]);
+    </script>
 </main>
 
 <footer><p>Site &copy; YEAR COMPANY all rights reserved</p></footer>
