--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -21,6 +21,22 @@ body {
     display: table;
 }
 
+nav {
+    text-align: right;
+    margin: 0.5em 1em;
+}
+
+nav a {
+    padding: 0.2em;
+    text-decoration: none;
+}
+
+header {
+    text-align: center;
+    font-size: 60px;
+    margin-top: 1em;
+}
+
 footer {
     font-size: 12px;
     text-align: center;
@@ -28,4 +44,27 @@ footer {
     position: absolute;
     right: 0; bottom: 0; left: 0;
     padding-bottom: 8px;
+}
+
+#hello {
+    font-size: 36px;
+    text-align: center;
+    width: 75%;
+    margin: 1em auto 0 auto;
+
+}
+
+#alveo-button {
+    text-align: center;
+    background: #000000;
+    width: 30%;
+    margin: 2em auto;
+    font-size: 36px;
+    color: #FFFFFF;
+    border: 3px solid #00AAFF;
+}
+
+#alveo-button:hover {
+    background: #444444;
+    cursor: pointer;
 }
