Added noscript tag for JavaScript check

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -21,7 +21,9 @@
 </head>
 
 <body>
+<noscript>
 <p id="javascript-check">This resource requires JavaScript to be enabled. Please whitelist us if you wish to use the application.</p>
+</noscript>
 <nav>
     {% if logged_in %}<a href="/logout">Logout</a>{% endif %}
     <a href="#alveo-main">Alveo</a>
