--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -21,6 +21,9 @@ body {
     display: table;
 }
 
+main {
+}
+
 #javascript-check {
     font-weight: bold;
     width: 100%;
@@ -66,7 +69,7 @@ footer {
 
 #alveo-button {
     text-align: center;
-    background: #000000;
+    background: #555555;
     width: 30%;
     margin: 2em auto;
     font-size: 36px;
@@ -77,4 +80,56 @@ footer {
 #alveo-button:hover {
     background: #444444;
     cursor: pointer;
+}
+
+@keyframes flicker {
+  0%   { opacity:1; }
+  50%  { opacity:0.4; }
+  100% { opacity:1; }
+}
+#clips-info {
+    margin: 1em 0 1em 0;
+    text-align: center;
+    font-size: 22px;
+    animation: flicker 1.75s infinite;
+}
+
+#clips {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
+
+.clip {
+    width: 300px;
+    height: 80px;
+    background: #000000;
+    color: #FFFFFF;
+    margin: 1em 0em 0em 1em;
+    display: inline-block;
+}
+
+.clip:hover {
+    cursor: pointer;
+    background: #444444;
+}
+
+.clip .name {
+    height: 60%;
+    padding: 1em 1em 1em 0.3em;
+    margin: 0 1em 0 1em;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.clip .duration {
+    padding-top: 0.6em;
+    width: 85%;
+    margin: auto;
+    font-size: 14px;
+    text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
