--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -123,7 +123,7 @@ footer {
     white-space: nowrap;
 }
 
-.clip .duration {
+.clip .info {
     padding-top: 0.6em;
     width: 85%;
     margin: auto;
@@ -132,4 +132,8 @@ footer {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+}
+
+.clip .duration {
+    display: inline-block;
 }
