--- a/alveott/src/app/auth.component.html
+++ b/alveott/src/app/auth.component.html
@@ -1,2 +1,2 @@
-<p id="hello">Welcome to the Alveo Transcription Tool. You're just one step away from being able to begin transcribing!</p>
-<p id="alveo-button" (click)="this.sessionService.login()">Login via Alveo</p>
+<p id="welcome-text">Welcome to the Alveo Transcription Tool. You're just one step away from being able to begin transcribing!</p>
+<p id="login-button" (click)="this.sessionService.login()">Login via Alveo</p>
