--- a/alveott/src/app/nav.component.html
+++ b/alveott/src/app/nav.component.html
@@ -1,3 +1,3 @@
-<a *ngIf="this.sessionService.isLoggedIn()" (click)="this.sessionService.logout()" href="javascript:void(0)">Logout</a>
+<a *ngIf="this.sessionService.isLoggedIn()" (click)="this.sessionService.logout()" routerLink="/login">Logout</a>
 <a href="http://alveo.edu.au/" target="_blank">Alveo</a>
 <a href="#about">About</a>
