Cleanups, session.component now breadboard.component

--- a/alveott/src/app/app.component.html
+++ b/alveott/src/app/app.component.html
@@ -1,9 +1,5 @@
 <nav></nav>
 <header><p>Alveo Transcription Tool</p></header>
-<session></session> <!-- temporary initialiser -->
+<breadboard></breadboard>
 <router-outlet></router-outlet>
 <footer><p>Site &copy; YEAR COMPANY all rights reserved</p></footer>
-
-<!-- guard from / if logged in, go to selector
-  guard from /selector and /annotator if not logged in, go to /
--->
