Proper centering of wavesurfer, rerender on window resize

--- a/alveott/src/app/player.component.css
+++ b/alveott/src/app/player.component.css
@@ -1,9 +1,10 @@
-#waveform {
-  display: inline-block;
+#player-container {
   width: 80%;
   text-align: center;
   margin: auto;
 }
 
-#waveform wave canvas {
+#waveform {
+  position: relative;
+  margin-bottom: 1em;
 }
