--- a/alveott/src/app/player.component.html
+++ b/alveott/src/app/player.component.html
@@ -1,11 +1,9 @@
-<script src="http://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.3.7/wavesurfer.min.js"></script>
-
+<div id="player-container">
 <div id="waveform"></div>
-
 <p>{{this.getPos()}} / {{this.getDuration()}}</p>
-
 <p (click)="this.play()">Play</p>
 <p (click)="this.stop()">Stop</p>
 <p (click)="this.pause()">Pause</p>
 <p (click)="this.seek(3.7)">Seek to 3.7 seconds</p>
 <p (click)="this.seek(0.0)">Reset (Seek 0)</p>
+</div>
