Added dynamic year display for footer

--- a/alveott/src/app/app.component.html
+++ b/alveott/src/app/app.component.html
@@ -2,4 +2,4 @@
 <header><p>Alveo Transcription Tool</p></header>
 <breadboard></breadboard>
 <router-outlet></router-outlet>
-<footer><p>Site &copy; YEAR COMPANY all rights reserved</p></footer>
+<footer><p>Site &copy; {{ this.year }} COMPANY all rights reserved</p></footer>
