--- a/alveott/src/app/annotator.component.html
+++ b/alveott/src/app/annotator.component.html
@@ -1,15 +1,7 @@
 <p id="header">Transcribing: {{this.dataService.selected.label}}</p>
 <p id="return-button" (click)="this.back()" >Save &amp; Return</p>
 
-<player></player>
+<player [clip]="this.dataService.selected"
+        [audioData]="this.dataService.raw()"></player>
 
-<div id="transcriber">
-    <div class="annotator" *ngFor="let segment of this.dataService.selected.segments">
-        <p class="timestamp">{{segment.start}} to {{segment.end}}</p>
-        <div class="annotator-fields">
-            <input class="speaker" type="text" placeholder="Speaker" [(ngModel)]="segment.speaker">
-            <input class="annotation" type="text" placeholder="Annotation" [(ngModel)]="segment.annotation">
-        </div>
-        <div class="playbar"></div>
-    </div>
-</div>
+<annotations [clip]="this.dataService.selected"></annotations>
