--- a/alveott/src/app/annotations.component.html
+++ b/alveott/src/app/annotations.component.html
@@ -1,8 +1,7 @@
-<div class="annotator" *ngFor="let segment of this.clip.segments">
+<div class="annotation" *ngFor="let segment of this.clip.segments">
   <p class="timestamp">{{segment.start}} to {{segment.end}}</p>
-  <div class="annotator-fields">
+  <div class="fields">
     <input class="speaker" type="text" placeholder="Speaker" [(ngModel)]="segment.speaker">
-    <input class="annotation" type="text" placeholder="Annotation" [(ngModel)]="segment.annotation">
+    <input class="data" type="text" placeholder="Annotation" [(ngModel)]="segment.annotation">
   </div>
-  <div class="playbar"></div>
 </div>
