--- a/alveott/src/app/annotations.component.css
+++ b/alveott/src/app/annotations.component.css
@@ -5,24 +5,24 @@
     margin: auto;
 }
 
-.annotator {
+.annotation {
     padding: 0.3em;
 }
 
-.annotator .timestamp {
+.timestamp {
 }
 
-.annotator-fields {
+.fields {
     display: flex;
     flex-direction: row;
 }
 
-.annotator-fields .speaker {
+.fields .speaker {
     width: 20%;
     height: 2.5em;
 }
 
-.annotator-fields .annotation {
+.fields .data {
     flex: 1 1 auto;
     margin-left: 1.4em;
     height: 2.5em;
