--- a/alveott/src/app/annotator.component.html
+++ b/alveott/src/app/annotator.component.html
@@ -1,7 +1,13 @@
-<p id="header">Transcribing: {{this.dataService.selected.label}}</p>
-<p id="return-button" (click)="this.back()" >Save &amp; Return</p>
+<div id="controller">
+  <div id="controller-float">
+    <div id="top-halign">
+      <p id="header">Transcribing: {{this.dataService.selected.label}}</p>
+      <p id="return-button" (click)="this.back()" >Save &amp; Return</p>
+    </div>
 
-<player [clip]="this.dataService.selected"
-        [audioData]="this.dataService.raw()"></player>
+    <player [clip]="this.dataService.selected"
+            [audioData]="this.dataService.raw()"></player>
+  </div>
+</div>
 
 <annotations [clip]="this.dataService.selected"></annotations>
