Responsive annotator header text overflow

--- a/alveott/src/app/annotator.component.css
+++ b/alveott/src/app/annotator.component.css
@@ -23,6 +23,10 @@
   font-size: 24px;
   vertical-align: middle;
   padding: 0.5rem 1rem 0.5rem 1rem;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 #return-button {
