--- a/alveott/src/app/player.component.css
+++ b/alveott/src/app/player.component.css
@@ -7,3 +7,24 @@
   position: relative;
   margin-bottom: 1em;
 }
+
+#controls {
+  display: flex;
+}
+
+#duration {
+  font-size: 28px;
+  font-weight: 550;
+  line-height: 48px;
+  padding: 0.2rem 0.8rem 0.2rem 0.8rem;
+  vertical-align: middle;
+}
+
+.divider {
+  flex: 1 1 auto;
+}
+
+.icon {
+  font-size: 48px;
+  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+}
