Added player control service, highlighting of selected region in annotations component

--- a/alveott/src/app/annotations.component.html
+++ b/alveott/src/app/annotations.component.html
@@ -1,4 +1,4 @@
-<div class="annotation" *ngFor="let segment of this.clip.segments">
+<div class="annotation" *ngFor="let segment of this.clip.segments" [class.highlight]="segment===this.playCtrlService.activeSegment">
   <p class="timestamp">{{segment.start}} to {{segment.end}}</p>
   <div class="fields">
     <input class="speaker" type="text" placeholder="Speaker" [(ngModel)]="segment.speaker">
