--- a/alveott/src/app/annotations.component.html
+++ b/alveott/src/app/annotations.component.html
@@ -1,5 +1,5 @@
 <div class="annotation" *ngFor="let segment of this.getSegmentsOrdered()" [class.highlight]="segment===this.playCtrlService.activeSegment">
-  <p class="timestamp">{{segment.start}} to {{segment.end}}</p>
+  <p class="timestamp">{{segment.start | annotation}} to {{segment.end | annotation }}</p>
   <div class="fields">
     <input class="speaker" type="text" placeholder="Speaker" [(ngModel)]="segment.speaker">
     <input class="data" type="text" placeholder="Annotation" [(ngModel)]="segment.annotation">
