--- a/alveott/src/app/player.component.html
+++ b/alveott/src/app/player.component.html
@@ -22,7 +22,7 @@
     <input id="zoom-slider" data-action="zoom" type="range" min="0" max="80" value="10" style="margin: 0.3em 0 0.3em 0; width: 20%">
     <p class="fi-zoom-in icon-noclick"></p>
 
-    <p class="fi-arrows-in icon" (click)="this.zoom()"></p>
-    <p class="fi-arrows-out icon" (click)="this.unzoom()"></p>
+    <p class="fi-arrows-in icon"></p>
+    <p class="fi-arrows-out icon"></p>
   </div>
 </div>
