Split data service into audio service
Will likely rename data service to clip service
May create sync service for holding data

--- a/alveott/src/app/annotator.component.html
+++ b/alveott/src/app/annotator.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <player [clip]="this.dataService.selected"
-            [audioData]="this.dataService.raw()"></player>
+            [audioData]="this.audioService.raw()"></player>
   </div>
 </div>
 
