Added new auth interface, OAuth2 placeholder module

--- a/src/app/mock-auth.component.html
+++ b/src/app/mock-auth.component.html
@@ -1,2 +1,2 @@
-<p id="welcome-text">Welcome to the Alveo Transcription Tool. You're just one step away from being able to begin transcribing!</p>
-<p id="login-button" (click)="this.login()">Login via Alveo</p>
+<p id="welcome-text">Welcome to the Alveo Transcription Tool. Please login.</p>
+<p id="login-button" (click)="this.actionLogin()">Login</p>
