Added back functionality

--- a/src/app/itemlist.component.html
+++ b/src/app/itemlist.component.html
@@ -1,4 +1,5 @@
 <h5>Items inside of {{this.getList().name}}</h5>
+<p (click)=actionBack()>Go back</p>
 <div class="center">
   <div class="items" *ngFor="let item of this.getList()" (click)="onSelect(item)">
     <p class="name">{{item}}</p>
