--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <nav></nav>
 <header><p>Alveo Transcription Tool</p></header>
+<div class="flex">
 <router-outlet></router-outlet>
+</div>
 <footer><p>Site &copy; {{ this.year }} COMPANY all rights reserved</p></footer>
