--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,24 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 header {
-    text-align: center;
-    font-size: 60px;
-    margin-top: 0.6em;
+  text-align: center;
+  font-size: 60px;
+  margin-top: 0.6em;
+  flex: 0 0 auto;
 }
 
 footer {
-    margin-top: 3em;
-    font-size: 12px;
-    text-align: center;
+  margin-bottom: 0.3em;
+  color: #BBBBBB;
+  font-size: 12px;
+  text-align: center;
+  flex: 0 0 auto;
+}
+
+.flex {
+  flex: 1 1 80%;
 }
