--- a/src/app/items.component.html
+++ b/src/app/items.component.html
@@ -1,5 +1,6 @@
-<h5>Items inside of {{this.getListName()}}({{this.getListSize()}})</h5>
-<p (click)=actionBack()>Go back</p>
+<span class="center"><p class="button" (click)="actionBack()">Back to index</p></span>
+
+<div id="subheader">Viewing "{{this.getListName()}}" list</div>
 <div class="center">
   <div class="items" *ngFor="let item of this.getItems()" (click)="onSelect(item)">
     <p class="name">{{item.url}}</p>
