--- a/src/app/dataview.component.html
+++ b/src/app/dataview.component.html
@@ -1,1 +1,9 @@
-<items></items>
+<span class="center"><p class="button" (click)="actionBack()">Back to index</p></span>
+<div id="subheader">Viewing "{{this.getListName()}}" list</div>
+<div id="divider">
+  <div id="left">
+  <items [items]="getItems()"></items>
+  </div>
+  <div id="right">
+  </div>
+</div>
